# streaming-candle

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: master.yml
API/: settings.py
app/: _test_consumer.py  pusher.py  redis_conf.py  utils.py
app/bybit/: callback.py  history.py  main.py  stream.py
app/mexc/: callback.py  main.py  settings.py
conf/: redis_conf.py  settings.py
